--- a/app/views/pages/investigations.html.erb
+++ b/app/views/pages/investigations.html.erb
@@ -3,6 +3,92 @@
     <article role="main" class="main reading">
 	
 		    <h1>Investigations</h1>
+
+			<p class="lede">These investigations draw on <a href="/data/incidents">data</a> published by Detention Logs or relate to the project. They cover broad areas of immigration detention including suicide, hunger strikes and deportations, and tell these stories in many different ways. They have been written by Detention Logs journalists and by other journalists from news organisations across Australia.</p>
+		
+			<h2 id="deportedbydiacintoperpetuallimbo"><a href="http://www.newmatilda.com/2013/08/14/deported-diac-perpetual-limbo">Deported by DIAC Into Perpetual Limbo</a></h2>
+			
+			<p>by Paul Farrell, Lawrence Bull and Luke Bacon</p>
+			
+			<p><em>August 14, 2013</em> - Ziad Awad was bundled onto a plane to be deported from Australia in 2011. He had slashed his wrists and was gushing blood. That was just the beginning. He spoke to New Matilda and Detention Logs in Ankara, Turkey.</p>
+			
+			<h2 id="asylumseekersdeportedwithviolence"><a href="http://www.newmatilda.com/2013/08/14/asylum-seekers-deported-violence">Asylum Seekers Deported with Violence</a></h2>
+			
+			<p>by Paul Farrell, Lawrence Bull and Luke </p>
+			
+			<p><em>14 August, 2013</em> - The Department of Immigration has approved the use of a body lock, strongly resembling a restraint technique banned by police, to involuntarily deport people from Australia.</p>
+			
+			<h2 id="assaultgangrapeclaimsindetentionrise"><a href="http://www.smh.com.au/national/assault-gang-rape-claims-in-detention-rise-20130727-2qrl7.html">Assault, gang rape claims in detention rise</a></h2>
+			
+			<p>by Natalie O’brien</p>
+			
+			<p><em>July 28, 2013</em> - The level of alleged gang rapes, sexual assaults, and sexual harassment of staff and detainees in detention centres has jumped dramatically as the number of asylum seekers arriving in Australia swells to a 10-year high.</p>
+			
+			<h2 id="ourcontractwithmanus"><a href="http://www.newmatilda.com/2013/07/23/exclusive-our-contract-manus">Our Contract With Manus</a></h2>
+			
+			<p>by Paul Farrell, Lawrence Bull and Luke Bacon</p>
+			
+			<p><em>July 23, 2013</em> - The contract for the management of Manus Island detention facility reveals that lower standards are expected for the quality of care of asylum seekers in Papua New Guinea.</p>
+			
+			<h2 id="manusoversightcommitteehasnevermetimmigrationdepartmentadmits"><a href="http://www.theguardian.com/world/2013/jul/15/manus-island-committee-never-met">Manus Oversight Committee Has Never Met, Immigration Department Admits</a></h2>
+			
+			<p>by Paul Farrell, Lawrence Bull, Luke Bacon and Oliver Laughland</p>
+			
+			<p><em>July 15, 2013</em> - The body set up between Australia and Papua New Guinea to oversee the treatment of asylum seekers at Manus Island detention facility is yet to have a single meeting.</p>
+			
+			<h2 id="salvosworriedaboutnauruchaos"><a href="http://www.newmatilda.com/2013/06/25/salvos-worried-about-nauru-chaos">Salvos Worried About Nauru Chaos</a></h2>
+			
+			<p>by Paul Farrell, Lawrence Bull and Luke Bacon</p>
+			
+			<p>June 25, 2013 - Salvation Army documents from 2012 reveal chaos at Nauru detention centre shortly after it was reopened. Detention Logs reports on dysentary, dog attacks and poor medical supplies.</p>
+			
+			<h2 id="villawooddetentioncentreisntsecure"><a href="http://www.newmatilda.com/2013/06/18/villawood-detention-centre-isnt-secure">Villawood Detention Centre Isn&#8217;t Secure</a></h2>
+			
+			<p>by Paul Farrell, Lawrence Bull and Luke Bacon</p>
+			
+			<p><em>June 18, 2013</em> - Security breaches and systems breakdowns are commonplace at Villawood Detention Centre. But is Serco taking responsibility for the escapes? </p>
+			
+			<h2 id="officialsadmitsedativeusedindetention"><a href="http://www.smh.com.au/national/officials-admit-sedative-used-in-detention-20130615-2oavo.html">Officials Admit Sedative Used In Detention</a></h2>
+			
+			<p>by Daniel Flitton</p>
+			
+			<p><em>June 16, 2013</em> - Immigration officials pinned down and injected tranquilisers into at least two asylum seekers on Christmas Island - despite public assurances that “under no circumstances” are chemical sedatives used in detention.</p>
+			
+			<h2 id="australianimmigrationdetentioncentres:everyincidentmapped"><a href="http://www.theguardian.com/news/datablog/interactive/2013/jun/12/immigration-detention-centres-mapped-interactive?CMP=twt_gu">Australian immigration detention centres: every incident mapped</a></h2>
+			
+			<p>by Nick Evershed, The Guardian Australia</p>
+			
+			<p><em>June 12, 2013</em> - An interactive map that shows when and where security incidents in detention centres occured between October 2009 and May 2011.</p>
+			
+			<h2 id="detention:scenesfromtheinside"><a href="http://www.theglobalmail.org/feature/detention-scenes-from-the-inside/632/">Detention: Scenes From The Inside</a></h2>
+			
+			<p>by Lawrence Bull, Luke Bacon, Paul Farrell</p>
+			
+			<p><em>June 11, 2013</em> - What happened during the Christmas Island riots? Detention Logs traces the pressure that led to an explosive riot, told through the eyes of those who were present and the Immigration Department’s own records.</p>
+			
+			<h2 id="riseinhungerstrikesandself-harminaustralianimmigrationcentres"><a href="http://www.theguardian.com/world/2013/jun/10/hunger-strikes-self-harm-australian-immigration-detention">Rise in hunger strikes and self-harm in Australian immigration centres</a></h2>
+			
+			<p>by Nick Evershed and Oliver Laughland </p>
+			
+			<p><em>June 11, 2013</em> - Detention Logs incident data shows large increase in number of incidents at Christmas Island and Curtin immigration detention centres.</p>
+			
+			<h2 id="detentionlogs:howyoucanhelp"><a href="http://www.theguardian.com/commentisfree/2013/jun/11/detention-logs-open-journalism">Detention Logs: how you can help</a></h2>
+			
+			<p>by Paul Farrell, Luke Bacon and Lawrence Bull</p>
+			
+			<p><em>June 11, 2013</em> - Our site is committed to investigating Australia’s immigration detention centres. We hope our readers can help us - this is how.</p>
+			
+			<h2 id="theeverydayviolenceinourdetentioncentres"><a href="http://www.newmatilda.com/2013/06/07/everyday-violence-our-detention-centres">The Everyday Violence In Our Detention Centres</a></h2>
+			
+			<p>by Paul Farrell, Lawrence Bull and Luke Bacon</p>
+			
+			<p><em>June 11, 2013</em> - How common are self harm incidents and hunger strikes in Australia&#8217;s detention centres? The Immigration Department won&#8217;t release the dataset, so the Detention Logs team compiled their own.</p>
+			
+			<h2 id="behindthewire:agraphicportraitoflifeindetention"><a href="http://behindthewire.theglobalmail.org/">Behind the Wire: A Graphic Portrait of Life in Detention</a></h2>
+			
+			<p>The Global Mail and Detention Logs</p>
+			
+			<p><em>June 11, 2013</em> - Thousands of people were held in Australian Immigration Detention Centres across Australia from October 2009 to May 2011. Here are the Department’s own records about the lives of these people.</p>
 		
 			<h2><a href="http://www.theglobalmail.org/feature/villawood-contamination-police-threaten-boycott/607/">Villawood Contamination: Police Threaten Boycott</a></h2>
 		
