--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,14 +1,14 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/about">About</a></li>
-				<li><a href="http://detentionlogs.com.au/contribute">Contribute</a></li>
+				<li><a href="/data/incidents">Data</a></li>
+				<li><a href="/investigations">Investigations</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/contribute">Contribute</a></li>			
 			</ul>
 			<ul class="supporting">
-				<li><a href="http://detentionlogs.com.au/glossary">Glossary</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
+				<li><a href="/glossary">Glossary</a></li>
+				<li><a href="/principles">Principles</a></li>	
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
